start to separate suChatPanel and adminChatPanel

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -123,8 +123,8 @@
 <script type='text/javascript' src='notePanel.controller.js'> </script>
 <script type='text/javascript' src='notePanel.directive.js'> </script>
 
-<script type='text/javascript' src='chatPanel.controller.js'> </script>
-<script type='text/javascript' src='chatPanel.directive.js'> </script>
+<script type='text/javascript' src='suChatPanel.controller.js'> </script>
+<script type='text/javascript' src='suChatPanel.directive.js'> </script>
 
 <script type='text/javascript' src='suNoteList.controller.js'> </script>
 <script type='text/javascript' src='suNoteList.service.js'> </script>
