--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -9,6 +9,6 @@
     </div>
 </div> <!--ng-controller='secondNavBarSuCtrl'-->
 
-<chat-panel></chat-panel>
+<su-chat-panel></su-chat-panel>
 
 <note-panel></note-panel>
