--- a/public/html/suChatPanel.html
+++ b/public/html/suChatPanel.html
@@ -1,5 +1,5 @@
 <!-- chat panel -->
-<div ng-controller='chatPanelCtrl'>
+<div ng-controller='suChatPanelCtrl'>
   <div class="panel panel-primary" id='chatPanel' ng-show='showChatPanel'>
     <div class="panel-heading">
       <div class="panel-title pull-left">Chat panel</div>
