implement admin 2nd nav bar message

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -227,6 +227,9 @@
 
 <script type='text/javascript' src='adminUserList.controller.js'> </script>
 
+<script type='text/javascript' src='adSecondNavBarMessage.service.js'> </script>
+
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
