--- a/public/html/secondNavBar.ad.html
+++ b/public/html/secondNavBar.ad.html
@@ -1,11 +1,11 @@
   <div ng-controller='secondNavBarAdCtrl'>
     <div class="navbar navbar-default navbar-fixed-top second-navbar" id="ad-2nd-nav-bar">
         <!-- <p class="navbar-text">สวัสดี {{userName}} เรามาดู Dashboard กัน</p> -->
-        <p class="navbar-text">{{suSecondNavBarMessage}}</p>
+        <p class="navbar-text">{{adSecondNavBarMessage}}</p>
 
         <ul class="nav navbar-nav pull-right">
           <li><a href="" ng-click="openNotePanel()"><img src="image/note-icon.jpg" style="width:25px;height:25px;border:0;"></a></li>
-          <li><a href="" ng-click="openChatPanel()"><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li>
+          <!--li><a href="" ng-click="openChatPanel()"><img src="image/chat-icon.png" style="width:25px;height:25px;border:0;"></a></li-->
         </ul>
     </div>
 
