start implement admin chat panel function

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -229,6 +229,9 @@
 
 <script type='text/javascript' src='adSecondNavBarMessage.service.js'> </script>
 
+<script type='text/javascript' src='adChatPanel.controller.js'> </script>
+<script type='text/javascript' src='adChatPanel.directive.js'> </script>
+
 
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
