--- a/public/html/secondNavBar.ad.html
+++ b/public/html/secondNavBar.ad.html
@@ -9,6 +9,8 @@
         </ul>
     </div>
 
+    <ad-chat-panel></ad-chat-panel>
+
     <!-- note panel -->
     <div class="panel panel-default" id='notePanel' ng-show='showNotePanel'>
       <label for="note">Note</label>
@@ -16,7 +18,7 @@
     </div>
 
     <!-- chat panel -->
-    <div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
+    <!--div class="panel panel-default" id='chatPanel' ng-show='showChatPanel'>
       <div class="panel-heading">Chat panel</div>
       <div class="panel-body" id='chatPanelBody' scroll-glue>
         <table class="table table-striped">
@@ -28,6 +30,6 @@
       <form id="chatPanel-message" ng-submit='sendMessage()'>
         <input id="chatPanel-message-input" type='text' ng-model='message' size='38' autofocus></input>
         <!-- <button type='submit' class='btn btn-success'>Send</button> -->
-      </form>
+      <!--/form>
     </div>
   </div> <!--ng-controller='secondNavBarSuCtrl'-->
