--- a/public/html/logIn.html
+++ b/public/html/logIn.html
@@ -24,7 +24,10 @@
   <div class="form-group">
     <p style="color:red">{{logInErrorMessage}}</p>
     <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter email" ng-model="credential.email">
+    <input type="email" class="form-control" id="email"
+           placeholder="Enter email"
+           ng-model="credential.email"
+           focus-on-show ng-show='inputEmailFocus'/>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
