implement $rootScope.adSendMessage to display sent message on the admin chat panel

--- a/public/html/adChatPanel.html
+++ b/public/html/adChatPanel.html
@@ -10,7 +10,7 @@
     </div>
     <div class="panel-body" id='adChatPanelBody' scroll-glue>
       <table class="table table-striped">
-        <tr ng-repeat='m in sentMessage track by $index'>
+        <tr ng-repeat='m in adSentMessage track by $index'>
           <td class="break-word">{{m}}</td>
         </tr>
       </table>
