implement share us with friends

--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -33,6 +33,7 @@
                   <li><a href="" ng-click='shareUs()'>Share us</a></li>
                 </ul>
       </li>
+      <li><a href="" ng-click='shareUs()'><span class=""></span>Share us with friends</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
       <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Setting</a></li>
