--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -7,7 +7,7 @@
 
   <div class="col-sm-10">
 
-    <h1>User visit: </h1>
+    <h1>User visit: {{userVisitMEP}} </h1>
     <h1>Subscribed user log in: </h1>
 
 <div class="col-sm-1"></div>
