--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -7,8 +7,10 @@
 
   <div class="col-sm-10">
 
-    <h1>User visit: {{userVisitMEP}} </h1>
-    <h1>Subscribed user log in: </h1>
+    <h1>
+      <span class='adminDashboardTitleFont'>User visit: </span>
+      <span class='adminDashboardDataFont'>{{userVisitMEP}}</span>
+    </h1>
 
 <div class="col-sm-1"></div>
 </div>
