real time user data using DB to keep track

--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -12,5 +12,12 @@
       <span class='adminDashboardDataFont'>{{userVisitMEP}}</span>
     </h1>
 
+    <hr>
+
+    <h1>
+      <span class='adminDashboardTitleFont'>User log in: </span>
+      <span class='adminDashboardDataFont'>{{suLoginMEP}}</span>
+    </h1>
+
 <div class="col-sm-1"></div>
 </div>
