--- a/public/html/signUp.html
+++ b/public/html/signUp.html
@@ -20,7 +20,8 @@
     <input type="email" class="form-control" id="email"
            placeholder="Enter email"
            ng-model="formData.email"
-           focus-on-show ng-show='signUpEmailFocus'>
+           focus-on-show ng-show='signUpEmailFocus'
+           press-Enter='signUpSubmit()'>
   </div>
   <button type="submit" class="btn btn-info btn-block">Sign up</button>
 </form>
