further work on real time user

--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -16,7 +16,7 @@
 
     <h1>
       <span class='adminDashboardTitleFont'>User log in: </span>
-      <span class='adminDashboardDataFont'>{{suLoginMEP}}</span>
+      <span class='adminDashboardDataFont'>{{suVisitMEP}}</span>
     </h1>
 
 <div class="col-sm-1"></div>
