start implementing real time user data on admin dashboard

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -233,6 +233,11 @@
 <script type='text/javascript' src='adChatPanel.directive.js'> </script>
 
 
+<script type='text/javascript' src='realTimeUser.service.js'> </script>
+
+
+
+
 <!-- bootstrap3 -->
 <script src="https://code.jquery.com/jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
