--- a/public/html/dashboard.ad.html
+++ b/public/html/dashboard.ad.html
@@ -8,7 +8,7 @@
   <div class="col-sm-10">
 
     <h1>
-      <span class='adminDashboardTitleFont'>User visit: </span>
+      <span class='adminDashboardTitleFont'>Default visit: </span>
       <span class='adminDashboardDataFont'>{{userVisitMEP}}</span>
     </h1>
 
@@ -17,6 +17,13 @@
     <h1>
       <span class='adminDashboardTitleFont'>User log in: </span>
       <span class='adminDashboardDataFont'>{{suVisitMEP}}</span>
+    </h1>
+
+    <hr>
+
+    <h1>
+      <span class='adminDashboardTitleFont'>Admin log in: </span>
+      <span class='adminDashboardDataFont'>{{adVisitMEP}}</span>
     </h1>
 
 <div class="col-sm-1"></div>
