implement live su list

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -235,6 +235,9 @@
 
 <script type='text/javascript' src='realTimeUser.service.js'> </script>
 
+<script type='text/javascript' src='liveSu.service.js'> </script>
+<script type='text/javascript' src='liveSu.controller.js'> </script>
+
 
 
 
