--- a/public/html/navBar.ad.html
+++ b/public/html/navBar.ad.html
@@ -21,7 +21,7 @@
       <li><a href="#!/dashboard/ad/{{userID}}">Dashboard</a></li>
       <li><a href="#!/admin/userList">User</a></li>
       <li><a href="#!/chatAdmin/{{userID}}/">Chat</a></li>
-      <li><a href="">LIVE</a></li>
+      <li><a href="#!/liveSu/{{userID}}">LIVE</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
       <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
