--- a/public/html/navBar.ad.html
+++ b/public/html/navBar.ad.html
@@ -24,11 +24,11 @@
       <li><a href="#!/liveSu/{{userID}}">LIVE</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
-      <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
-      <li><a href="#!logIn"><span class="glyphicon glyphicon-log-in"></span>Log in</a></li>
+      <li><a href="#!/signUp"><span class="glyphicon glyphicon-user"></span>Sign Up</a></li>
+      <li><a href="#!/logIn"><span class="glyphicon glyphicon-log-in"></span>Log in</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
-      <li><a href="#!logOut"><span class="glyphicon glyphicon-log-out"></span>Log out</a></li>
+      <li><a href="#!/logOut"><span class="glyphicon glyphicon-log-out"></span>Log out</a></li>
     </ul>
   </div>
 </div>
