--- a/public/html/navBar.html
+++ b/public/html/navBar.html
@@ -11,18 +11,13 @@
               <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="#/!">Modern Education Platform</a>
+      <a class="navbar-brand" href="#!/">Modern Education Platform</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-    <ul class="nav navbar-nav" ng-show='isLogIn()'>
-      <li><a href="#!/dashboard">Dash Board</a></li>
-      <li><a href="#!examListPage">Exam list</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right" ng-show='!isLogIn()'>
-      <li><a href="#!signUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+    <ul class="nav navbar-nav navbar-right">
+      <li><a href="#!/signUp"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li><a href="#!/logInCheck" ng-click=""><span class="glyphicon glyphicon-log-in"></span> Log in</a></li>
 
       <li class="dropdown">
@@ -34,10 +29,6 @@
                 </ul>
       </li>
       <li><a href="" ng-click='shareUs()'><span class=""></span>Share us with friends</a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right" ng-show='isLogIn()'>
-      <li><a href="#"><span class="glyphicon glyphicon-cog"></span> Setting</a></li>
-      <li><a href="#!logOut"><span class="glyphicon glyphicon-log-out"></span> Log out</a></li>
     </ul>
   </div>
 </div>
