add + in the su chat panel for new chat

--- a/public/html/suChatPanel.html
+++ b/public/html/suChatPanel.html
@@ -4,6 +4,7 @@
     <div class="panel-heading">
       <div class="panel-title pull-left">Chat panel</div>
       <div class="panel-title pull-right">
+        <a href='' ng-click='newChat()'><span class="glyphicon glyphicon-plus"></span></a>
         <a href='' ng-click='openChatPanel()'><span class="glyphicon glyphicon-remove"></span></a>
       </div>
       <div class="clearfix"></div>
