--- a/public/html/adChatPanel.html
+++ b/public/html/adChatPanel.html
@@ -4,6 +4,7 @@
     <div class="panel-heading">
       <div class="panel-title pull-left">Chat panel</div>
       <div class="panel-title pull-right">
+        <a href='' ng-click='adNewChat()'><span class="glyphicon glyphicon-plus"></span></a>
         <a href='' ng-click='closeChatPanel()'><span class="glyphicon glyphicon-remove"></span></a>
       </div>
       <div class="clearfix"></div>
