reverse su chat message to be kept in $rootScope

--- a/public/html/suChatPanel.html
+++ b/public/html/suChatPanel.html
@@ -11,7 +11,7 @@
     </div>
     <div class="panel-body" id='chatPanelBody' scroll-glue>
       <table class="table table-striped">
-        <tr ng-repeat='m in sentMessage track by $index'>
+        <tr ng-repeat='m in chatMessage track by $index'>
           <td class="break-word">{{m}}</td>
         </tr>
       </table>
