start implementing pagination

--- a/public/html/index.html
+++ b/public/html/index.html
@@ -238,6 +238,8 @@
 <script type='text/javascript' src='liveSu.service.js'> </script>
 <script type='text/javascript' src='liveSu.controller.js'> </script>
 
+<script type='text/javascript' src='page.service.js'> </script>
+
 
 
 
