--- a/public/html/loginHistory.admin.html
+++ b/public/html/loginHistory.admin.html
@@ -30,4 +30,10 @@
     </table>
 
   <div class="col-sm-1"></div>
+
+  <ul uib-pagination total-items="bigTotalItems"
+      ng-model="bigCurrentPage" max-size="maxSize"
+      class="pagination-sm" boundary-links="true"
+      force-ellipses="true"></ul>
+
 </div>
