fix fb privacy policy

--- a/public/html/secondNavBar.su.html
+++ b/public/html/secondNavBar.su.html
@@ -1,5 +1,5 @@
   <div ng-controller='secondNavBarSuCtrl'>
-    <div class="navbar navbar-default second-navbar" id="su-2nd-nav-bar">
+    <div class="navbar navbar-default navbar-fixed-top second-navbar" id="su-2nd-nav-bar">
         <p class="navbar-text">{{suSecondNavBarMessage}}</p>
 
         <ul class="nav navbar-nav pull-right">
