--- a/public/html/index.html
+++ b/public/html/index.html
@@ -251,6 +251,8 @@
 
 <script type='text/javascript' src='page.service.js'> </script>
 
+<script type='text/javascript' src='adminToReply.controller.js'> </script>
+<script type='text/javascript' src='adminToReply.service.js'> </script>
 
 
 
